--- a/app/password/password.component.html
+++ b/app/password/password.component.html
@@ -51,7 +51,8 @@ it shouldn't have any other siblings other than the <ActionBar> component.
                     <!-- <Label text="Label 2" row="0" col="1" colSpan="2" backgroundColor="green"></Label> -->
                 </GridLayout>
                 <StackLayout class="py-20">
-                    <Button class="btn btn-rounded-sm btn-primary btn-active" text="Submit" (tap)="backupProfile()"></Button>
+                    <Button class="btn btn-rounded-sm btn-primary btn-active" *ngIf="!screenCode" text="Login" (tap)="login()"></Button>
+                    <Button class="btn btn-rounded-sm btn-primary btn-active" *ngIf="screenCode" text="Submit" (tap)="setPin()"></Button>
                 </StackLayout>
             </StackLayout>
         </ScrollView>
