--- a/app/home/home.component.css
+++ b/app/home/home.component.css
@@ -1,9 +1,1 @@
-.page-styling{
-    padding: 20 20;
-    color: black;
-    padding-bottom: 10;
-}
-.head-title{
-    font-size: 25;
-    font-weight: bold;
-}
+.page-styling{padding:20 20;color:black;padding-bottom:10}.head-title{font-size:25;font-weight:bold}.fill-screen-overlay{background-color:rgba(0,0,0,0.4);z-index:100}
