--- a/app/settings/settings.component.css
+++ b/app/settings/settings.component.css
@@ -1,9 +1,1 @@
-.page-styling{
-    padding: 50 20;
-    color: black;
-    padding-bottom: 10;
-}
-.py-20{
-    padding-top: 20;
-    padding-bottom: 20;
-}
+.page-styling{padding:50 20;color:black;padding-bottom:10}.py-20{padding-top:20;padding-bottom:20}.red-text{color:red}
